--- a/static/index.html
+++ b/static/index.html
@@ -1,46 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kripto Exchange</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/web3@1.3.0/dist/web3.min.js"></script>
-  <script defer>
-    
-  </script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Swappy - home</title>
+	<style>
+		* {
+			padding: 0;
+			margin: 0 auto;
+			box-sizing: border-box;
+			text-align: center;
+			max-width: 100%;
+		}
+		body {
+			width: 100vw;
+			height: 100vh;
+			z-index: 0;
+		}
+
+		:root {
+			--color1: #0e0e0e;
+			--color2: #1e1e1e;
+			--color3: #007bff;
+			--color3a: #51a4fc;
+			--color4: white;
+			--color5: rgba(0, 0, 0, 0.3)
+		}
+		body {
+			overflow-x: hidden;
+			overflow-y: hidden;
+			position: relative;
+			font-family: Verdana, Geneva, Tahoma, sans-serif;
+			background-color: var(--color1);
+		}
+		body::after {
+			content: "";
+			position: absolute;
+			top: -10%;
+			left: -20%;
+			width: 200%;
+  			height: 300%;
+			z-index: -1;
+			rotate: 20deg;
+			background-image: url("images/money.png");
+			opacity: 0.4;
+		}
+		header {
+			padding-top: 20px;
+			min-height: 120px;
+			background-color: var(--color5);
+			margin-bottom: 130px;
+		}
+		nav {
+			height: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: baseline;
+			flex-wrap: wrap;
+		}
+		h1, h2, p, a, pre, table {
+			color: var(--color4);
+		}
+		h1 {
+			font-size: 4rem;
+			flex: 3;
+		}
+		a {
+			text-decoration: none;
+			font-weight: bolder;
+			font-size: 1.5rem;
+			transition: 0.5s;
+			flex: 1;
+		}
+		a:hover {
+			text-shadow: 0 0 10px var(--color4);
+		}
+		article {
+			max-width: 800px;
+			padding: 20px 70px;
+			border: 1px solid var(--color4);
+			border-radius: 10px;
+		}
+		article > section:not(:last-of-type) {
+			margin-bottom: 50px;
+		}
+		section > h2 {
+			position: relative;
+			margin-bottom: 15px;
+		}
+		section > h2::after {
+			content: "";
+			position: absolute;
+			bottom: -5px;
+			left: 50%;
+			transform: translateX(-50%);
+			height: 3px;
+			width: 90%;
+			background-color: var(--color3);
+		}
+		.component {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			gap: 5px;
+		}
+		.component:not(:last-of-type) {
+			margin-bottom: 5px;
+		}
+		.component > p {
+			display: flex;
+			height: 100px;
+			justify-content: center;
+			align-items: center;
+			font-size: 0.8rem;
+			transition: 0.5s;
+		}
+		.component > p:first-of-type {
+			flex: 1;
+			background-color: var(--color3);
+		}
+		.component > p:first-of-type:hover {
+			transform: scale(1.02);
+			filter: grayscale(0.3);
+			box-shadow: 3px 3px 20px var(--color1);
+		}
+		.component > p:last-of-type {
+			padding: 0 10px;
+			text-align: left;
+			background-color: var(--color3a);
+			flex: 3;
+		}
+		.scrolablePart {
+			height: 100vh;
+			height: 100svh;
+			overflow-y: auto;
+		}
+		.scrolablePart > :last-child {
+			margin-bottom: 200px;
+		}
+	</style>
 </head>
 <body>
-	<div class="enlarged_logo"></div>
-	<header>
-		<h1>Swappy</h1>
-		<div class="header-img"></div>
-	</header>
-	<main>
-    <section class="exchange-form">
-        <h2>Exchange Form</h2>
-        <form>
-        	<label for="fromCurrency">From:</label>
-        	<select id="fromCurrency"></select>
-        	<input type="number" id="fromAmount" placeholder="Amount">
-        	<label for="toCurrency">To:</label>
-        	<select id="toCurrency"></select>
-        	<button type="submit">Exchange</button>
-        </form>
-        <!-- <div id="exchangeResult"></div> -->
-    </section>
-    <section class="trade-history">
-        <h2>Trade History</h2>
-        <ul id="tradeList"></ul>
-    </section>
-	</main>
-	<footer>
-	  	<p>&copy; 2024 Kripto Exchange</p>
-	  	<br>
-	  	<div class="footer-icons">
-	  	  	<img src="images/facebook.png" alt="Facebook Icon">
-	  	  	<img src="images/ig.png" alt="Instagram Icon">
-	  	</div>
-	</footer>
+	<div class="scrolablePart">
+		<header>
+			<nav>
+				<h1>Swappy</h1>
+				<a href="./swap.html">Swap tokens</a>
+				<a href="./swap.html">Get in touch</a>
+				<a href="./swap.html">Donate</a>
+			</nav>
+		</header>
+		<main>
+			<article>
+				<section>
+					<h2>Introduction to Our Web3 DEX Platform</h2>
+					<p>
+						In the rapidly evolving landscape of decentralized finance (DeFi), our new Web3 decentralized exchange (DEX) platform stands out by leveraging the power of Uniswap's protocol to facilitate seamless token swaps. This platform empowers users to exchange one cryptocurrency for another with minimal friction, all while ensuring security and efficiency.
+					</p>
+				</section>
+				<section>
+					<h2>How it works</h2>
+					<p>
+						Our DEX utilizes Uniswap's Swap Router, a critical component of the Uniswap protocol that enables the exchange of tokens on the Ethereum blockchain. By interfacing directly with this robust system, our platform allows users to execute swaps with the ease and reliability inherent to Uniswap's automated market-making (AMM) mechanism.
+					</p>
+				</section>
+				<section>
+					<h2>Key Technologies</h2>
+					<div class="component">
+						<p onclick="window.location.href = 'https://www.javascript.com'">Javascript</p>
+						<p>The backbone of our user interface and application logic. JavaScript enables dynamic and interactive features, ensuring a smooth user experience on the web platform.</p>
+					</div>
+					<div class="component">
+						<p onclick='window.location.href = "https://docs.ethers.org/v6/"'>Ethers.js</p>
+						<p>This lightweight library is crucial for interacting with the Ethereum blockchain.</p>
+					</div>
+					<div class="component">
+						<p onclick="window.location.href = 'https://expressjs.com/'">Express</p>
+						<p>This Node.js framework is used to build our backend API, managing routes and handling HTTP requests with ease.</p>
+					</div>
+					<div class="component">
+						<p onclick="window.location.href = 'https://soliditylang.org/'">Solidity<br>(solcjs compiler)</p>
+						<p>The programming language used to write our smart contracts. Solidity enables us to create secure and efficient smart contracts that power the core functionalities of our DEX platform.</p>
+					</div>
+					<div class="component">
+						<p onclick="window.location.href = 'https://telebit.cloud/'">Telebit</p>
+						<p>Telebit is a tool for managing HTTP connections on specified ports, simplifying website deployment. It forwards traffic from your port to a Telebit server, which handles port forwarding and provides a free domain and SSL certificate.</p>
+					</div>
+				</section>
+			</article>
+		</main>
+	</div>
 </body>
 </html>
